--- a/solution.ipynb
+++ b/solution.ipynb
@@ -1,28 +1,20 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "packages installed \n",
-    "ipykernel\n",
-    "geopandas\n",
-    "pulp"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 194,
+   "execution_count": 222,
    "metadata": {},
    "outputs": [],
    "source": [
     "import geopandas as gpd\n",
-    "import pulp as pl"
+    "import pulp as pl\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.patches as mpatches"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 223,
    "metadata": {},
    "outputs": [
     {
@@ -41,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 196,
+   "execution_count": 224,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +176,7 @@
        "[100 rows x 4 columns]"
       ]
      },
-     "execution_count": 196,
+     "execution_count": 224,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 197,
+   "execution_count": 225,
    "metadata": {},
    "outputs": [
     {
@@ -224,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 226,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +238,7 @@
        "- Prime Meridian: Greenwich"
       ]
      },
-     "execution_count": 198,
+     "execution_count": 226,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -259,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 227,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 200,
+   "execution_count": 228,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 201,
+   "execution_count": 229,
    "metadata": {},
    "outputs": [
     {
@@ -340,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 202,
+   "execution_count": 230,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 203,
+   "execution_count": 231,
    "metadata": {},
    "outputs": [
     {
@@ -481,7 +473,7 @@
        " 99: [89, 98]}"
       ]
      },
-     "execution_count": 203,
+     "execution_count": 231,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -514,7 +506,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 204,
+   "execution_count": 232,
    "metadata": {},
    "outputs": [
     {
@@ -555,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 233,
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 234,
    "metadata": {},
    "outputs": [
     {
@@ -657,7 +649,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 235,
    "metadata": {},
    "outputs": [
     {
@@ -672,9 +664,6 @@
     }
    ],
    "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import matplotlib.patches as mpatches\n",
-    "\n",
     "gdf_filtered['chosen'] = gdf_filtered.index.isin(chosen_polygons)\n",
     "\n",
     "fig, ax = plt.subplots(figsize=(10, 8))\n",
